Reduce max height to avoid big shift when loader occupies it.

--- a/src/components/Connect/Connect.module.css
+++ b/src/components/Connect/Connect.module.css
@@ -137,7 +137,7 @@
   color: rgb(0, 6, 26);
   border: none;
   overflow: hidden;
-  max-height: 2rem;
+  max-height: 1.8rem;
 }
 
 .submitButton.send {
